// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parsepatchFile can handle files with CRLF line breaks 1`] = `
[
  {
    "hash": "3e1267f",
    "hunk": {
      "header": {
        "original": {
          "length": 0,
          "start": 1,
        },
        "patched": {
          "length": 1,
          "start": 1,
        },
      },
      "parts": [
        {
          "lines": [
            "this is a new file
",
          ],
          "noNewlineAtEndOfFile": false,
          "type": "insertion",
        },
      ],
    },
    "mode": 420,
    "path": "banana.ts",
    "semverExclusivity": null,
    "type": "file creation",
  },
]
`;

exports[`parsepatchFile works 1`] = `
[
  {
    "fromPath": "numbers.txt",
    "semverExclusivity": null,
    "toPath": "banana.txt",
    "type": "rename",
  },
  {
    "newMode": 493,
    "oldMode": 420,
    "path": "banana.txt",
    "semverExclusivity": null,
    "type": "mode change",
  },
  {
    "afterHash": "92d2c5f",
    "beforeHash": "fbf1785",
    "hunks": [
      {
        "header": {
          "original": {
            "length": 4,
            "start": 1,
          },
          "patched": {
            "length": 4,
            "start": 1,
          },
        },
        "parts": [
          {
            "lines": [
              "one",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "deletion",
          },
          {
            "lines": [
              "ne",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "insertion",
          },
          {
            "lines": [
              "",
              "two",
              "",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
        ],
      },
    ],
    "path": "banana.txt",
    "semverExclusivity": null,
    "type": "patch",
  },
]
`;

exports[`parsepatchFile works 2`] = `
[
  {
    "afterHash": "842652c",
    "beforeHash": "2de83dd",
    "hunks": [
      {
        "header": {
          "original": {
            "length": 5,
            "start": 1,
          },
          "patched": {
            "length": 5,
            "start": 1,
          },
        },
        "parts": [
          {
            "lines": [
              "this",
              "is",
              "",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
          {
            "lines": [
              "a",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "deletion",
          },
          {
            "lines": [
              "",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "insertion",
          },
          {
            "lines": [
              "file",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
        ],
      },
    ],
    "path": "banana.ts",
    "semverExclusivity": null,
    "type": "patch",
  },
]
`;

exports[`parsepatchFile works 3`] = `
[
  {
    "fromPath": "numbers.txt",
    "semverExclusivity": null,
    "toPath": "banana.txt",
    "type": "rename",
  },
  {
    "newMode": 493,
    "oldMode": 420,
    "path": "banana.txt",
    "semverExclusivity": null,
    "type": "mode change",
  },
  {
    "afterHash": "92d2c5f",
    "beforeHash": "fbf1785",
    "hunks": [
      {
        "header": {
          "original": {
            "length": 4,
            "start": 1,
          },
          "patched": {
            "length": 4,
            "start": 1,
          },
        },
        "parts": [
          {
            "lines": [
              "one",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "deletion",
          },
          {
            "lines": [
              "ne",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "insertion",
          },
          {
            "lines": [
              "",
              "two",
              "",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
        ],
      },
    ],
    "path": "banana.txt",
    "semverExclusivity": null,
    "type": "patch",
  },
]
`;

exports[`parsepatchFile works for a simple case 1`] = `
[
  {
    "afterHash": "842652c",
    "beforeHash": "2de83dd",
    "hunks": [
      {
        "header": {
          "original": {
            "length": 5,
            "start": 1,
          },
          "patched": {
            "length": 5,
            "start": 1,
          },
        },
        "parts": [
          {
            "lines": [
              "this",
              "is",
              "",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
          {
            "lines": [
              "a",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "deletion",
          },
          {
            "lines": [
              "",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "insertion",
          },
          {
            "lines": [
              "file",
            ],
            "noNewlineAtEndOfFile": false,
            "type": "context",
          },
        ],
      },
    ],
    "path": "banana.ts",
    "semverExclusivity": null,
    "type": "patch",
  },
]
`;
